# hand_eyes_calibration

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build_eigen.sh  build_opencv.sh  build_realsense.sh  calib.cpp  detect.cpp
include/calibration/01_intrinsic/: ChessBoardCalibrator.h  IntrinsicCalibrator.h
include/calibration/02_hand_eye_2d_4point/: FourPointCalibrator.h
include/calibration/03_hand_eye_2d_12point/: TwelvePointCalibrator.h
include/calibration/04_hand_eye_3d_ball/: BallCalibrator.h
include/calibration/05_hand_eye_3d_board_img/: BoardImageCalibrator.h
include/calibration/06_hand_eye_3d_board_cloud/: BoardCloudCalibrator.h
include/calibration/hand_eye_3d_base/: RobotCameraCalibrator3D.h
include/common/: ArucoMarkerDetector.h  CalibrationTypes.h  CoordinateTransformer.h  Math.h  Pose2d.h  Pose3d.h  RealSenseCamera.h  pc_LUT.h
src/calibration/01_intrinsic/: ChessBoardCalibrator.cpp  IntrinsicCalibrator.cpp
src/calibration/02_hand_eye_2d_4point/: FourPointCalibrator.cpp
src/calibration/03_hand_eye_2d_12point/: TwelvePointCalibrator.cpp
src/calibration/04_hand_eye_3d_ball/: BallCalibrator.cpp
src/calibration/05_hand_eye_3d_board_img/: BoardImageCalibrator.cpp
src/calibration/06_hand_eye_3d_board_cloud/: BoardCloudCalibrator.cpp
src/calibration/hand_eye_3d_base/: RobotCameraCalibrator3D.cpp
src/common/: ArucoMarkerDetector.cpp  CoordinateTransformer.cpp  Math.cpp
